# mlir-exp

./: .gitmodules  CMakeLists.txt  README.md
include/nbai/Conversion/: Passes.h  Passes.td
include/nbai/Dialect/NBAI/: .NBAIOps.td.swp  NBAI.td  NBAIDialect.h  NBAIOps.h  NBAIOps.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  Passes.cpp
lib/Conversion/JSONToNBAI/: CMakelists.txt  JSONToNBAI.cpp
lib/Dialect/NBAI/: CMakeLists.txt  CMakelists.txt
lib/Dialect/NBAI/IR/: NBAIDialect.cpp  NBAIOps.cpp
nix_files/: flake.nix
tools/nbai-opt/: CMakelists.txt  nbai-op.cpp
